Create an order to check consumable resources
Since consumable resources might track information, it makes sense to check
some before others. This provides a way to do that.